[package]
name = "lifter"
version = "0.5.1"
authors = ["Caleb Hattingh <caleb.hattingh@gmail.com>"]
edition = "2021"

[profile.release]
# https://github.com/johnthagen/min-sized-rust
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 'z'

[dependencies]
scraper = "0.22.0"
regex = "1.6.0"
structopt = { version = "0.3.26", features = ["paw"] }
paw = "1.0.0"
zip = "2.2.2"
flate2 = "1.0.35"
tar = "0.4.43"
tini = "1.3.0"
stderrlog = "0.6.0"
log = "0.4.17"
itertools = "0.13.0"
anyhow = "1.0.65"
xz2 = "0.1.7"
rayon = "1.7.0"
strfmt = "0.2.4"
url = "2.5.4"
jsonpath-rust = "0.7.5"
serde_json = "1.0.134"
ureq = "2.12.1"
backtrace = "0.3.73"

