[package]
name = "lifter"
version = "0.5.1"
authors = ["Caleb Hattingh <caleb.hattingh@gmail.com>"]
edition = "2021"

[profile.release]
# https://github.com/johnthagen/min-sized-rust
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 'z'

[dependencies]
scraper = "0.23.1"
regex = "1.6.0"
structopt = { version = "0.3.26", features = ["paw"] }
paw = "1.0.0"
zip = "2.3.0"
flate2 = "1.1.2"
tar = "0.4.44"
tini = "1.3.0"
stderrlog = "0.6.0"
log = "0.4.17"
itertools = "0.14.0"
anyhow = "1.0.65"
xz2 = "0.1.7"
rayon = "1.11.0"
strfmt = "0.2.5"
url = "2.5.4"
jsonpath-rust = "1.0.4"
serde_json = "1.0.142"
ureq = "3.0.12"
backtrace = "0.3.73"

