[package]
name = "lifter"
version = "0.5.2"
authors = ["Caleb Hattingh <caleb.hattingh@gmail.com>"]
edition = "2021"

[profile.release]
# https://github.com/johnthagen/min-sized-rust
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 'z'
strip = "symbols"

[package.metadata.release]
# Match existing bare-semver tags (e.g. `0.5.2`, no `v` prefix) so the
# release workflow trigger in .github/workflows/release.yml fires.
tag-name = "{{version}}"
# Not a library — don't push to crates.io.
publish = false

[dependencies]
scraper = "0.26.0"
regex = "1.6.0"
structopt = { version = "0.3.26", features = ["paw"] }
paw = "1.0.0"
zip = "8.5.0"
flate2 = "1.1.9"
tar = "0.4.45"
tini = "1.3.0"
stderrlog = "0.6.0"
log = "0.4.17"
itertools = "0.14.0"
anyhow = "1.0.65"
xz2 = "0.1.7"
rayon = "1.12.0"
strfmt = "0.2.5"
url = "2.5.4"
jsonpath-rust = "1.0.4"
serde_json = "1.0.149"
ureq = "3.3.0"
backtrace = "0.3.76"

